--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,41 @@
+body {
+    margin: 0;
+}
+
 #headerStrony {
     height: 60px;
     background-color: #45517D;
-    text-align: left;
     color: white;
+    text-align: right;
+    vertical-align: middle;
+    width: 100%;
 }
 
 #footerStrony {
-    height: 60px;
     background-color: #45517D;
     color: white;
     font-size: 150%;
+    text-align: center;
+}
+
+#footerTable {
+    width: 100%;
+}
+
+#lewyPanel {
+    background-color: #61B2EC;
+    width: 40%;
+    height: 500px;
+}
+
+ul a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+#prawyPanel {
+    background-color: #8EC9F2;
+    width: 60%;
+    height: 500px;
 }
